# DataSciency

./: README.md
A_B_testing/: README.md  kaggle_data.ipynb  pyproject.toml
A_B_testing/eda/: kaggle_data.ipynb
marketing-funnel/: README.md  pyproject.toml
marketing-funnel/app/: streamlit_app.py
marketing-funnel/notebooks/: eda.ipynb
marketing-funnel/utils/: charts.py  cohort.py  funnel.py  load_data.py
