[project]
name = "my-data-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Riccha Sethi",email = "ricchasethi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=1.15.2,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
